# adf-scan

./: .gitignore  Dockerfile  README.md  index.yaml  pyproject.toml
.github/workflows/: build.yaml  helm-release.yaml
chart/adf-scan/: Chart.yaml  values.yaml
chart/adf-scan/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  pvc.yaml
src/adf_scan/: __main__.py  config.py  escl.py  pdf.py  scanner.py
tests/: conftest.py  test_escl.py  test_scanner.py
