[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adf-scan"
version = "0.1.0"
description = "Automatic document feeder scanner daemon using eSCL protocol"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31",
    "img2pdf>=0.5",
    "defusedxml>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
]

[tool.setuptools.packages.find]
where = ["src"]
